# CoreClasses

./: CMakeLists.txt  LICENSE  README.md  factory.hpp  main.cpp  rtti.hpp  service.hpp
include/core/: logging.hpp
libraries/: CMakeLists.txt
libraries/UsefulUtils/: CMakeLists.txt  README.md
libraries/UsefulUtils/cmake/: Installing.cmake
libraries/UsefulUtils/include/: bounding_box.hpp  debug_print.hpp  dispatch_queue.hpp  factory.hpp  halton_sampler.hpp  interpolation.hpp  logging.hpp  math_functions.hpp  rtti.hpp  service.hpp  transform.hpp  types.hpp
libraries/UsefulUtils/src/: bounding_box.cpp  debug_print.cpp  dispatch_queue.cpp  halton_sampler.cpp  hasher.cpp  transform.cpp
logging/: logging.hpp
rtti/: factory.hpp  rtti.hpp  service.hpp
src/: CMakeLists.txt  dispatch_queue.cpp
tests/: dispatch_unittest.cpp
threading/: dispatch_queue.cpp  dispatch_queue.hpp
threading/unittests/: CMakeLists.txt
utils/: hasher.cpp  hasher.hpp  string_utils.hpp
